resolved overflow bug

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@ body {
     background-color: #2B0E26;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .main-page {
     width: 100%;
     height: 1600px;
-    overflow: hidden;
 }
 
 .profile-image {
